--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,8 @@
 /* DEBUG */
+
+/* Heights & Widths */
 .debug [class*="col-"] {
   height: 100%;
-}
-
-.debug_lgrey {
-  background-color: lightgrey;
 }
 
 .debug_h100 {
@@ -15,8 +13,14 @@
   height: 400px;
 }
 
+/* Borders and Colors */
+
 .debug_border {
   border: 2px solid black;
+}
+
+.debug_lgrey {
+  background-color: lightgrey;
 }
 
 .debug_dblue {
