--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ section {
 }
 
 /* Borders and Colors */
-
 .debug_border {
   border: 2px solid black;
 }
@@ -45,4 +44,99 @@ section {
 
 .debug_white {
   background-color: white;
+}
+
+/* Header */
+ul {
+  list-style: none;
+}
+
+.ms_links a {
+  text-decoration: none;
+}
+
+/* Colors */
+.ms_dblue {
+  color: #031c4e;
+}
+
+.ms_dblue a {
+  color: #031c4e;
+}
+
+.ms_dblue a:hover {
+  color: #0069fe;
+}
+
+.ms_blue {
+  color: #0069fe;
+}
+
+.ms_blue a {
+  color: #0069fe;
+}
+
+.ms_blue a:hover {
+  color: #031c4e;
+}
+
+/* Buttons */
+a.btn_blue {
+  padding: 10px;
+  color: #0069fe;
+  border: 1px solid #0069fe;
+  border-radius: 5px;
+}
+
+a.btn_blue:hover {
+  color: white;
+  background-color: #0069fe;
+}
+
+/* Header */
+header {
+  height: 70px;
+  line-height: 70px;
+  background-color: white;
+}
+
+header img {
+  height: 30px;
+  margin-bottom: 5px;
+}
+
+header .ms_nav i {
+  font-size: 16px;
+  font-weight: 900;
+}
+
+header .ms_nav li {
+  display: inline-block;
+  margin: 2px 10px 0 0;
+  font-size: 16px;
+  font-weight: 900;
+}
+
+header .ms_nav_c li:nth-child(odd) a::after {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\f078";
+}
+
+header .ms_nav_r ul {
+  padding: 0 ;
+}
+
+header .ms_nav_r li:nth-child(2) a::after {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\f078";
+}
+
+header .ms_nav_r li:last-child {
+  margin-right: 0;
+}
+
+.jumbotron {
+  margin-top: 70px;
 }
